# RAG

./: Cargo.toml  README.md
src/: contents.rs  error.rs  finder.rs  main.rs  open_ai.rs  vector.rs
