[package]
name = "RAG"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
axum-streams = { version = "0.12.0", features = ["text"] }
futures = "0.3.28"
openai = "1.0.0-alpha.10"
qdrant-client = "1.2.0"
serde = { version = "1.0.164", features = ["serde_derive"] }
serde_json = "1.0.96"
tokio-stream = "0.1.14"
tower-http = { version = "0.5.0", features = ["fs"] }
uuid = "1.3.3"

